# SAP

./: .gitignore  README.md  example_provider.py  pyproject.toml  setup.py
examples/: example.xml  example_provider_simple.py
registry/: README.md  registry_server.py  saps.txt
sap/: __init__.py  cli.py  example_provider.py  example_provider_complex.py  example_provider_simple.py  models.py  query_scope.py  scheduler.py  scope.py  server.py  xml_loader.py
