[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-provider"
version = "0.1.0"
description = "SAP - A Python module for data providers and scheduling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    # Dependencies will be read from requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
sap = "sap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sap*"]
